--- a/c18-estilos-css/videoGames/public/css/styles.css
+++ b/c18-estilos-css/videoGames/public/css/styles.css
@@ -17,7 +17,7 @@ a {
 } */
 
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Edu TAS Beginner', cursive;
 }
 
 /* HEADER */
