--- a/c20-posicionamiento-avanzando/videoGames/views/index.html
+++ b/c20-posicionamiento-avanzando/videoGames/views/index.html
@@ -18,55 +18,38 @@
   <header class="header">
     <img class="header__logo" src="/img/printAll.png" alt="logo-printall" />
     <ul class="header__links">
-      <li><a href="#">Productos</a></li>
+      <li class="link__products"><a href="#">Productos</a></li>
       <li><a href="#">Acerca de mi</a></li>
-      <li><a href="#">Ingresar</a></li>
+      <li class="link__login"><a href="#">Ingresar</a></li>
     </ul>
   </header>
 
   <main class="main">
     <h1 class="main__title">PrintAll</h1>
-    <h4>Servicio de impresión 3d</h4>
-
     <section class="products">
-      <article class="item">
+      <article class="product__item">
         <img src="/img/images.jpg" alt="producto1">
         <h4>Impresion de Resina</h4>
         <p>$500</p>
       </article>
 
-      <article>
+      <article class="product__item">
         <img src="/img/images.jpg" alt="producto1">
         <h4>Impresion de Resina</h4>
         <p>$500</p>
       </article>
 
-      <article>
+      <article class="product__item">
         <img src="/img/images.jpg" alt="producto1">
         <h4>Impresion de Resina</h4>
         <p>$500</p>
       </article>
     </section>
 
-    <section>
-      <h4>Destacados</h4>
-      <ol type="I">
-        <li>Llaveros</li>
-        <li>Soportes</li>
-        <li>Funkos</li>
-      </ol>
-      <img src="/img/images.jpg" alt="Imagen de fondo" />
-    </section>
-
-    <section>
-      <h4>Marcas utilizadas</h4>
-      <ul>
-        <li>3N3</li>
-        <li>Printalot</li>
-        <li>Grilon3</li>
-        <li>Hellbot</li>
-      </ul>
-      <img src="" alt="" />
+    <section class="d__flex__prueba">
+      <div class="a">A</div>
+      <div class="b">B</div>
+      <div class="c">C</div>
     </section>
   </main>
 
