--- a/c45-agregando-interaccion-con-eventos/views/home.html
+++ b/c45-agregando-interaccion-con-eventos/views/home.html
@@ -15,15 +15,14 @@
       rel="stylesheet"
     />
     <!-- iconos -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"https://github.com/Josemiranda989/comi-13-jujuy
     />
   </head>
-
+  https://gitkraken.dev/link/dnNjb2RlOi8vZWFtb2Rpby5naXRsZW5zL2xpbmsvci85NThkZjg2MjAwZjFiOTFmNzc3NzM5MzM0YzZmZmY2OTE1YWE2NmQ2P3VybD1odHRwcyUzQSUyRiUyRmdpdGh1Yi5jb20lMkZKb3NlbWlyYW5kYTk4OSUyRmNvbWktMTMtanVqdXkuZ2l0?origin=gitlens
   <body>
     <header>
       <nav class="nav__top">
